Updates, round 2 data

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 
 <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 <script src="voter_data.json"></script>
+<script src="round2.json"></script>
 </head>
 
 <body>
 
-<div id="svg-container"></div>
+<div id="round-one-container"></div>
+<div id="round-two-container"></div>
 <script src="map.js"></script>
 </body>
