--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 
 <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
-<script src="voter_data.json"></script>
+<script src="round1.json"></script>
 <script src="round2.json"></script>
 </head>
 
